src/test/ui/unsafe/unsafe-around-compiler-generated-unsafe.thir.stderr
error: unnecessary `unsafe` block
  --> $DIR/unsafe-around-compiler-generated-unsafe.rs:9:9
   |
LL |         unsafe { async {}.await; }
   |         ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/unsafe-around-compiler-generated-unsafe.rs:5:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

